--- a/AchrefProject/templates/chauffeur/chauffeurStats.html.twig
+++ b/AchrefProject/templates/chauffeur/chauffeurStats.html.twig
@@ -1,36 +1,34 @@
 {% extends 'baseBack.html.twig' %}
 
 {% block body %}
-<canvas id="myChart" style="max-width: 800px; max-height: 500px; display: block; "></canvas>
+<div class="row">
+    <div class="col-md-6">
+        <canvas id="likesChart" style="max-width: 800px; max-height: 500px; display: block; "></canvas>
+    </div>
+    <div class="col-md-6">
+        <canvas id="otherStatsChart" style="max-width: 800px; max-height: 500px; display: block; "></canvas>
+    </div>
+</div>
 {% endblock %}
 
 {% block javascripts %}
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
-    var ctx = document.getElementById('myChart').getContext('2d');
-    var myChart = new Chart(ctx, {
+    // Pie chart for likes and dislikes
+    var likesCtx = document.getElementById('likesChart').getContext('2d');
+    var likesChart = new Chart(likesCtx, {
         type: 'pie',
         data: {
-            labels: ['Total des chauffeurs', 'Total des infoTraffics', 'Moyenne infoTraffics par chauffeur',  'ID avec le plus d\'infoTraffics','Total Likes','Total Dislikes'],
+            labels: ['Likes', 'Dislikes'],
             datasets: [{
                 label: '# of Items',
                 data: [
-                    {{ totalChauffeurs }},
-                    {{ totalInfotraffics }},
-                    {{ averageInfotrafficsPerChauffeurs }},
-                    {{IDchauffeurwithmostinfotraffic}}, 
-                    {{totalLikes}},
-                    {{totaldisLikes}},
+                    {{ totalLikes }},
+                    {{ totaldisLikes }},
                 ],
                 backgroundColor: [
-                    'rgba(255, 99, 132, 0.5)',
-                    'rgba(54, 162, 235, 0.5)',
-                    'rgba(255, 206, 86, 0.5)',
                     'rgba(75, 192, 192, 0.5)',
-                    'rgba(153, 102, 255, 0.5)',
-                    'rgba(255, 159, 64, 0.5)',
                     'rgba(255, 99, 132, 0.5)',
-                    'rgba(54, 162, 235, 0.5)'
                 ],
                 borderWidth: 1
             }]
@@ -48,6 +46,43 @@
                         return percentage + "% (" + currentValue + ")";
                     }
                 }
+            }
+        }
+    });
+
+    // Bar chart for other statistics
+    var statsCtx = document.getElementById('otherStatsChart').getContext('2d');
+    var statsChart = new Chart(statsCtx, {
+        type: 'bar',
+        data: {
+            labels: ['Total des chauffeurs', 'Total des infoTraffics', 'Moyenne infoTraffics par chauffeur',  'ID avec le plus d\'infoTraffics'],
+            datasets: [{
+                label: '# of Items',
+                data: [
+                    {{ totalChauffeurs }},
+                    {{ totalInfotraffics }},
+                    {{ averageInfotrafficsPerChauffeurs }},
+                    {{IDchauffeurwithmostinfotraffic}},
+                ],
+                backgroundColor: [
+                    'rgba(255, 99, 132, 0.5)',
+                    'rgba(54, 162, 235, 0.5)',
+                    'rgba(255, 206, 86, 0.5)',
+                    'rgba(75, 192, 192, 0.5)',
+                ],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        beginAtZero: true
+                    }
+                }]
+            },
+            legend: {
+                display: false
             }
         }
     });
