--- a/UserCrud/templates/assurance/edit.html.twig
+++ b/UserCrud/templates/assurance/edit.html.twig
@@ -1,26 +1,28 @@
 {% extends 'base-back.html.twig' %}
 
+{% block title %}Edit Assurance{% endblock %}
 
 {% block body %}
-    <!DOCTYPE html>
+  <!DOCTYPE html>
 
 <html lang="en" class="default-style layout-fixed layout-navbar-fixed">
-<!-- Mirrored from html.phoenixcoded.net/empire/bootstrap/default/school-parents.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 24 Mar 2023 20:55:42 GMT -->
+
+
+<!-- Mirrored from html.phoenixcoded.net/empire/bootstrap/default/pages_users_edit.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 24 Mar 2023 20:57:17 GMT -->
 <head>
-{% block title %}Admin{% endblock %}
- <meta charset="utf-8">
+
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <meta name="description"
-        content="Empire is one of the unique admin template built on top of Bootstrap 4 framework. It is easy to customize, flexible code styles, well tested, modern & responsive are the topmost key factors of Empire Dashboard Template" />
+    <meta name="description" content="Empire is one of the unique admin template built on top of Bootstrap 4 framework. It is easy to customize, flexible code styles, well tested, modern & responsive are the topmost key factors of Empire Dashboard Template" />
     <meta name="keywords" content="bootstrap admin template, dashboard template, backend panel, bootstrap 4, backend template, dashboard template, saas admin, CRM dashboard, eCommerce dashboard">
     <meta name="author" content="Codedthemes" />
-    <link rel="icon" type="image/x-icon" href="{{asset('back-office/img/favicon.ico')}}">
-{% block css%}
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
+
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 
-    <!-- Icon fonts -->
+ <!-- Icon fonts -->
     <link rel="stylesheet" href="{{asset('back-office/fonts/fontawesome.css')}}">
     <link rel="stylesheet" href="{{asset('back-office/fonts/ionicons.css')}}">
     <link rel="stylesheet" href="{{asset('back-office/fonts/linearicons.css')}}">
@@ -28,22 +30,24 @@
     <link rel="stylesheet" href="{{asset('back-office/fonts/pe-icon-7-stroke.css')}}">
     <link rel="stylesheet" href="{{asset('back-office/fonts/feather.css')}}">
 
-    <!-- Core stylesheets -->
+ <!-- Core stylesheets -->
     <link rel="stylesheet" href="{{asset('back-office/css/bootstrap-material.css')}}">
     <link rel="stylesheet" href="{{asset('back-office/css/shreerang-material.css')}}">
     <link rel="stylesheet" href="{{asset('back-office/css/uikit.css')}}">
 
     <!-- Libs -->
     <link rel="stylesheet" href="{{asset('back-office/libs/perfect-scrollbar/perfect-scrollbar.css')}}">
-    <link rel="stylesheet" href="{{asset('back-office/libs/flot/flot.css')}}">
-{% endblock %}
+    <link rel="stylesheet" href="{{asset('back-office/libs/select2/select2.css')}}">
+    <link rel="stylesheet" href="{{asset('back-office/libs/bootstrap-tagsinput/bootstrap-tagsinput.css')}}">
 
+    <!-- Page -->
+    <link rel="stylesheet" href="{{asset('back-office/css/pages/users.css')}}">
 </head>
 <!-- [ Preloader ] Start -->
     <div class="page-loader">
         <div class="bg-primary"></div>
     </div>
-    <!-- [ Preloader ] End -->
+    <!-- [ Preloader ] Ebd -->
 
     <!-- [ Layout wrapper ] Start -->
     <div class="layout-wrapper layout-2">
@@ -61,12 +65,13 @@
                     </a>
                 </div>
                 <div class="sidenav-divider mt-0"></div>
+
                 <!-- Links -->
                 <ul class="sidenav-inner py-1">
                     <!-- Pages -->
                     <li class="sidenav-divider mb-1"></li>
                     <li class="sidenav-header small font-weight-semibold">settings</li>
-                    <li class="sidenav-item active open">
+                    <li class="sidenav-item">
                         <a href="javascript:" class="sidenav-link sidenav-toggle">
                             <i class="sidenav-icon feather icon-users"></i>
                             <div>Users</div>
@@ -80,7 +85,7 @@
                         </ul>
                     </li>
                     <li class="sidenav-header small font-weight-semibold">Details</li>
-                    <li class="sidenav-item">
+                    <li class="sidenav-item active open">
                         <a href="javascript:" class="sidenav-link sidenav-toggle">
                             <i class="sidenav-icon feather icon-users"></i>
                             <div>Assurances</div>
@@ -106,7 +111,7 @@
                         <span class="app-brand-logo demo">
                             <img src="{{ asset('back-office/img/logo-dark.png') }}" alt="Brand Logo" class="img-fluid">
                         </span>
-                        <span class="app-brand-text demo font-weight-normal ml-2">TicTacGo</span>
+                        <span class="app-brand-text demo font-weight-normal ml-2">Empire</span>
                     </a>
 
                     <!-- Sidenav toggle (see assets/css/demo/demo.css) -->
@@ -129,7 +134,7 @@
                             <label class="nav-item navbar-text navbar-search-box p-0 active">
                                 <i class="feather icon-search navbar-icon align-middle"></i>
                                 <span class="navbar-search-input pl-2">
-                                    <input type="text" class="form-control navbar-text mx-2" placeholder="Search...">
+                                  <input type="text" class="form-control navbar-text mx-2" placeholder="Search...">
                                 </span>
                             </label>
                         </div>
@@ -158,7 +163,7 @@
                                         </a>
 
                                         <a href="javascript:" class="list-group-item list-group-item-action media d-flex align-items-center">
-                                            <div class="ui-icon ui-icon-sm feather icon-user-plus bg-primary border-0 text-white"></div>
+                                            <div class="ui-icon ui-icon-sm feather icon-user-plus bg-info border-0 text-white"></div>
                                             <div class="media-body line-height-condenced ml-3">
                                                 <div class="text-dark">You have
                                                     <strong>4</strong> new followers</div>
@@ -257,7 +262,7 @@
                                 <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
                                     <span class="d-inline-flex flex-lg-row-reverse align-items-center align-middle">
                                         <img src="{{ asset('back-office/img/avatars/1.png') }}" alt class="d-block ui-w-30 rounded-circle">
-                                        {% if app.user !=null %}
+                                       {% if app.user !=null %}
 
                                  <span class="px-1 mr-lg-2 ml-2 ml-lg-0">{{app.user.FirstName }}</span>
                                 {% endif %}
@@ -279,99 +284,29 @@
                     </div>
                 </nav>
                 <!-- [ Layout navbar ( Header ) ] End -->
-                <!-- [ Layout content ] Start -->
-                <div class="layout-content">
-                    <!-- [ content ] Start -->
+                                    <!-- [ content ] Start -->
                     <div class="container-fluid flex-grow-1 container-p-y">
-                        <h4 class="font-weight-bold py-3 mb-0">Users</h4>
+                        <h4 class="font-weight-bold py-3 mb-0">Edit Assurance</h4>
                         <div class="text-muted small mt-0 mb-4 d-block breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="{{ path('app_home_back') }}"><i class="feather icon-home"></i></a></li>
-                                <li class="breadcrumb-item"><a href="{{ path('app_user_index') }}">Users</a></li>
-                                <li class="breadcrumb-item active">Account settingss</li>
+                                <li class="breadcrumb-item"><a href="{{ path('app_assurance_index') }}">Assurance list</a></li>
+                                <li class="breadcrumb-item active">Edit Assurance</li>
                             </ol>
                         </div>
-                       <div class="row">
-    <!-- subscribe start -->
-    <div class="col-md-12">
-        <div class="card">
-            <div class="card-header">
-                <h5>Users list</h5>
-            </div>
-            <div class="card-body">
-                <div class="row align-items-center m-l-0">
-                    <div class="col-sm-6">
-                        <form action="{{ path('app_user_index') }}" method="GET">
-                            <div class="input-group mb-3">
-                                <input type="text" name="email" class="form-control" placeholder="Search by email" value="{{ app.request.query.get('email') }}">
-                                <div class="input-group-append">
-                                    <button class="btn btn-outline-secondary" type="submit">Search</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="col-sm-6 text-right">
-                        <button class="btn btn-success btn-sm mb-3 btn-round" data-toggle="modal" data-target="#modal-report"><a href="{{ path('app_user_new') }}"><i class="feather icon-plus"></i> Add user</a></button>
-                    </div>
-           {% set orderDirectionParam = orderDirection == 'asc' ? 'desc' : 'asc' %}
+                        <div class="nav-tabs-top">
+                            <ul class="nav nav-tabs">
+                                <li class="nav-item">
+                                    <a class="nav-link active" data-toggle="tab" href="#user-edit-account">Assurance</a>
+                                </li>
+                            </ul>
+    {{ include('assurance/_form.html.twig', {'button_label': 'Update'}) }}
+    </div>
 
-<button class="btn btn-info btn-sm mb-3 btn-round" onclick="location.href='{{ path('app_user_index', {'orderBy': 'FirstName', 'orderDirection': orderDirectionParam}) }}'">
-    <i class="feather icon-arrow-{{ orderDirection }}"></i> Sort by First name
-</button>
+    <a href="{{ path('app_assurance_index') }}"><button type="button" class="btn btn-default">Cancel</button></a>
+    </div>
+      <!-- [ content ] End -->
 
-
-
-                </div>
-                <div class="table-responsive">
-                    <table id="report-table" class="table table-bordered table-striped mb-0">
-                        <thead>
-                            <tr>
-                                <th>Image</th>
-                                <th>Type user</th>
-                                <th>First Name</th>
-                                <th>Last Name</th>
-                                <th>Email</th>
-                                <th>Password</th>
-                                <th>Numero Telephone</th>
-                                <th>Date de Naissance</th>
-                                <th>Gender</th>
-                                <th>Options</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for user in users %}
-                            <tr>
-                                <td><img src="{{ asset('back-office/img/user/avatar-1.jpg') }}" class="img-radius" width="30px" height="30px"></td>
-                                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                                <td>{{ user.FirstName }}</td>
-                                <td>{{ user.LastName }}</td>
-                                <td>{{ user.email }}</td>
-                                <td>********</td>
-                                <td>{{ user.telephone }}</td>
-                                <td>{{ user.birthdate.format('d/m/Y')}}</td>
-                                <td>{{ user.gender }}</td>
-                                <td>
-                                    <a href="{{ path('app_user_show', {'id': user.id}) }}"class="btn btn-info btn-sm">Show</a>
-                                    <a href="{{ path('app_user_edit', {'id': user.id}) }}"class="btn btn-info btn-sm">Edit</a>
-                                    <form action="{{ path('app_user_delete', {'id': user.id}) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this item?');">
-                                        <input type="hidden" name="_method" value="POST">
-                                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-                                        <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                                    </form>
-                                </td>
-                            </tr>
-                            {% else %}
-                            <tr>
-                                <td colspan="6">no records found</td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div
-
-                    <!-- [ content ] End -->
                     <!-- [ Layout footer ] Start -->
                     <nav class="layout-footer footer footer-light">
                         <div class="container-fluid d-flex flex-wrap justify-content-between text-center container-p-x pb-3">
@@ -387,12 +322,18 @@
                         </div>
                     </nav>
                     <!-- [ Layout footer ] End -->
+
                 </div>
                 <!-- [ Layout content ] Start -->
+
             </div>
             <!-- [ Layout container ] End -->
         </div>
-    {% block js %}
+        <!-- Overlay -->
+        <div class="layout-overlay layout-sidenav-toggle"></div>
+    </div>
+    <!-- [ Layout wrapper ] end -->
+     {% block js %}
     <!-- Core scripts -->
     <script src="{{asset('back-office/js/pace.js')}}"></script>
     <script src="{{asset('back-office/js/jquery-3.3.1.min.js')}}"></script>
@@ -404,18 +345,16 @@
 
     <!-- Libs -->
     <script src="{{asset('back-office/libs/perfect-scrollbar/perfect-scrollbar.js')}}"></script>
-    <script src="{{asset('back-office/libs/datatables/datatables.js')}}"></script>
+    <script src="{{asset('back-office/libs/select2/select2.js')}}"></script>
+    <script src="{{asset('back-office/libs/bootstrap-tagsinput/bootstrap-tagsinput.js')}}"></script> 
 
     <!-- Demo -->
     <script src="{{asset('back-office/js/demo.js')}}"></script>
-    <script>
-       // DataTable start
-        $('#report-table').DataTable();
-        // DataTable end
-    </script>
-    <script src="{{asset('back-office/js/pages/dashboards_index.js')}}"></script>
+    <script src="{{asset('back-office/js/analytics.js')}}"></script>
+    <script src="{{asset('back-office/js/pages/pages_users_edit.js')}}"></script>
  {% endblock %}
- <!-- Mirrored from html.phoenixcoded.net/empire/bootstrap/default/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 24 Mar 2023 20:46:47 GMT -->
+ <!-- Mirrored from html.phoenixcoded.net/empire/bootstrap/default/pages_users_edit.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 24 Mar 2023 20:57:17 GMT -->
 </html>
 
+    {{ include('assurance/_delete_form.html.twig') }}
 {% endblock %}
