--- a/UserCrud/templates/assurance/index.html.twig
+++ b/UserCrud/templates/assurance/index.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base-back.html.twig' %}
 
+{% block title %}Assurance index{% endblock %}
 
 {% block body %}
     <!DOCTYPE html>
@@ -7,7 +8,6 @@
 <html lang="en" class="default-style layout-fixed layout-navbar-fixed">
 <!-- Mirrored from html.phoenixcoded.net/empire/bootstrap/default/school-parents.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 24 Mar 2023 20:55:42 GMT -->
 <head>
-{% block title %}Admin{% endblock %}
  <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
@@ -66,7 +66,7 @@
                     <!-- Pages -->
                     <li class="sidenav-divider mb-1"></li>
                     <li class="sidenav-header small font-weight-semibold">settings</li>
-                    <li class="sidenav-item active open">
+                    <li class="sidenav-item">
                         <a href="javascript:" class="sidenav-link sidenav-toggle">
                             <i class="sidenav-icon feather icon-users"></i>
                             <div>Users</div>
@@ -80,7 +80,7 @@
                         </ul>
                     </li>
                     <li class="sidenav-header small font-weight-semibold">Details</li>
-                    <li class="sidenav-item">
+                    <li class="sidenav-item active open">
                         <a href="javascript:" class="sidenav-link sidenav-toggle">
                             <i class="sidenav-icon feather icon-users"></i>
                             <div>Assurances</div>
@@ -279,98 +279,72 @@
                     </div>
                 </nav>
                 <!-- [ Layout navbar ( Header ) ] End -->
-                <!-- [ Layout content ] Start -->
+                                <!-- [ Layout content ] Start -->
                 <div class="layout-content">
                     <!-- [ content ] Start -->
                     <div class="container-fluid flex-grow-1 container-p-y">
-                        <h4 class="font-weight-bold py-3 mb-0">Users</h4>
+                        <h4 class="font-weight-bold py-3 mb-0">Assurance</h4>
                         <div class="text-muted small mt-0 mb-4 d-block breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="{{ path('app_home_back') }}"><i class="feather icon-home"></i></a></li>
-                                <li class="breadcrumb-item"><a href="{{ path('app_user_index') }}">Users</a></li>
-                                <li class="breadcrumb-item active">Account settingss</li>
+                                <li class="breadcrumb-item active">Assurance list</li>
                             </ol>
                         </div>
-                       <div class="row">
-    <!-- subscribe start -->
-    <div class="col-md-12">
-        <div class="card">
-            <div class="card-header">
-                <h5>Users list</h5>
-            </div>
-            <div class="card-body">
-                <div class="row align-items-center m-l-0">
-                    <div class="col-sm-6">
-                        <form action="{{ path('app_user_index') }}" method="GET">
-                            <div class="input-group mb-3">
-                                <input type="text" name="email" class="form-control" placeholder="Search by email" value="{{ app.request.query.get('email') }}">
-                                <div class="input-group-append">
-                                    <button class="btn btn-outline-secondary" type="submit">Search</button>
+                        <div class="row">
+                            <!-- subscribe start -->
+                            <div class="col-md-12">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <h5>Assurances list</h5>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="row align-items-center m-l-0">
+                                            <div class="col-sm-6">
+                                            </div>
+                                            <div class="col-sm-6 text-right">
+                                            </div>
+                                        </div>
+                                        <div class="table-responsive">
+    <table id="report-table" class="table table-bordered table-striped mb-0">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Date_validite</th>
+                <th>Immatriculation</th>
+                <th>Options</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for assurance in assurances %}
+            <tr>
+                <td>{{ assurance.id }}</td>
+                <td>{{ assurance.dateValidite ? assurance.dateValidite|date('Y-m-d') : '' }}</td>
+                <td>{{ assurance.immatriculation }}</td>
+                <td>
+           <a href="{{ path('app_assurance_show_admin', {'id': assurance.id}) }}"class="btn btn-info btn-sm">show</a>
+           <a href="{{ path('app_assurance_edit_admin', {'id': assurance.id}) }}"class="btn btn-info btn-sm">edit</a>
+<form action="{{ path('app_assurance_delete', {'id': assurance.id}) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this item?');">
+    <input type="hidden" name="_method" value="POST">
+    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ assurance.id) }}">
+    <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+</form>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="4">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+                  </div>
+                                    </div>
                                 </div>
                             </div>
-                        </form>
+                            <!-- subscribe end -->
+                        </div>
                     </div>
-                    <div class="col-sm-6 text-right">
-                        <button class="btn btn-success btn-sm mb-3 btn-round" data-toggle="modal" data-target="#modal-report"><a href="{{ path('app_user_new') }}"><i class="feather icon-plus"></i> Add user</a></button>
-                    </div>
-           {% set orderDirectionParam = orderDirection == 'asc' ? 'desc' : 'asc' %}
-
-<button class="btn btn-info btn-sm mb-3 btn-round" onclick="location.href='{{ path('app_user_index', {'orderBy': 'FirstName', 'orderDirection': orderDirectionParam}) }}'">
-    <i class="feather icon-arrow-{{ orderDirection }}"></i> Sort by First name
-</button>
-
-
-
-                </div>
-                <div class="table-responsive">
-                    <table id="report-table" class="table table-bordered table-striped mb-0">
-                        <thead>
-                            <tr>
-                                <th>Image</th>
-                                <th>Type user</th>
-                                <th>First Name</th>
-                                <th>Last Name</th>
-                                <th>Email</th>
-                                <th>Password</th>
-                                <th>Numero Telephone</th>
-                                <th>Date de Naissance</th>
-                                <th>Gender</th>
-                                <th>Options</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for user in users %}
-                            <tr>
-                                <td><img src="{{ asset('back-office/img/user/avatar-1.jpg') }}" class="img-radius" width="30px" height="30px"></td>
-                                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                                <td>{{ user.FirstName }}</td>
-                                <td>{{ user.LastName }}</td>
-                                <td>{{ user.email }}</td>
-                                <td>********</td>
-                                <td>{{ user.telephone }}</td>
-                                <td>{{ user.birthdate.format('d/m/Y')}}</td>
-                                <td>{{ user.gender }}</td>
-                                <td>
-                                    <a href="{{ path('app_user_show', {'id': user.id}) }}"class="btn btn-info btn-sm">Show</a>
-                                    <a href="{{ path('app_user_edit', {'id': user.id}) }}"class="btn btn-info btn-sm">Edit</a>
-                                    <form action="{{ path('app_user_delete', {'id': user.id}) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this item?');">
-                                        <input type="hidden" name="_method" value="POST">
-                                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-                                        <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                                    </form>
-                                </td>
-                            </tr>
-                            {% else %}
-                            <tr>
-                                <td colspan="6">no records found</td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div
-
                     <!-- [ content ] End -->
                     <!-- [ Layout footer ] Start -->
                     <nav class="layout-footer footer footer-light">
