--- a/UserCrud/templates/assurance/show.html.twig
+++ b/UserCrud/templates/assurance/show.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base-back.html.twig' %}
 
+{% block title %}Assurance{% endblock %}
 
 {% block body %}
-    <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" class="default-style layout-fixed layout-navbar-fixed">
 <!-- Mirrored from html.phoenixcoded.net/empire/bootstrap/default/school-parents.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 24 Mar 2023 20:55:42 GMT -->
 <head>
-{% block title %}Admin{% endblock %}
  <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
@@ -35,10 +35,12 @@
 
     <!-- Libs -->
     <link rel="stylesheet" href="{{asset('back-office/libs/perfect-scrollbar/perfect-scrollbar.css')}}">
-    <link rel="stylesheet" href="{{asset('back-office/libs/flot/flot.css')}}">
+    <!-- Page -->
+    <link rel="stylesheet" href="{{asset('back-office/css/pages/users.css')}}">
 {% endblock %}
 
 </head>
+
 <!-- [ Preloader ] Start -->
     <div class="page-loader">
         <div class="bg-primary"></div>
@@ -66,7 +68,7 @@
                     <!-- Pages -->
                     <li class="sidenav-divider mb-1"></li>
                     <li class="sidenav-header small font-weight-semibold">settings</li>
-                    <li class="sidenav-item active open">
+                    <li class="sidenav-item">
                         <a href="javascript:" class="sidenav-link sidenav-toggle">
                             <i class="sidenav-icon feather icon-users"></i>
                             <div>Users</div>
@@ -80,7 +82,7 @@
                         </ul>
                     </li>
                     <li class="sidenav-header small font-weight-semibold">Details</li>
-                    <li class="sidenav-item">
+                    <li class="sidenav-item active open">
                         <a href="javascript:" class="sidenav-link sidenav-toggle">
                             <i class="sidenav-icon feather icon-users"></i>
                             <div>Assurances</div>
@@ -96,7 +98,7 @@
                 </ul>
             </div>
             <!-- [ Layout sidenav ] End -->
-            <!-- [ Layout container ] Start -->
+                        <!-- [ Layout container ] Start -->
             <div class="layout-container">
                 <!-- [ Layout navbar ( Header ) ] Start -->
                 <nav class="layout-navbar navbar navbar-expand-lg align-items-lg-center bg-dark container-p-x" id="layout-navbar">
@@ -279,100 +281,52 @@
                     </div>
                 </nav>
                 <!-- [ Layout navbar ( Header ) ] End -->
-                <!-- [ Layout content ] Start -->
+                                                <!-- [ Layout content ] Start -->
                 <div class="layout-content">
                     <!-- [ content ] Start -->
                     <div class="container-fluid flex-grow-1 container-p-y">
-                        <h4 class="font-weight-bold py-3 mb-0">Users</h4>
+                        <h4 class="font-weight-bold py-3 mb-0">Assurance</h4>
                         <div class="text-muted small mt-0 mb-4 d-block breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="{{ path('app_home_back') }}"><i class="feather icon-home"></i></a></li>
-                                <li class="breadcrumb-item"><a href="{{ path('app_user_index') }}">Users</a></li>
-                                <li class="breadcrumb-item active">Account settingss</li>
+                                <li class="breadcrumb-item"><a href="{{ path('app_assurance_index') }}">Assurance list</a></li>
+                                <li class="breadcrumb-item active">Details assurance </li>
                             </ol>
                         </div>
-                       <div class="row">
-    <!-- subscribe start -->
-    <div class="col-md-12">
-        <div class="card">
-            <div class="card-header">
-                <h5>Users list</h5>
-            </div>
-            <div class="card-body">
-                <div class="row align-items-center m-l-0">
-                    <div class="col-sm-6">
-                        <form action="{{ path('app_user_index') }}" method="GET">
-                            <div class="input-group mb-3">
-                                <input type="text" name="email" class="form-control" placeholder="Search by email" value="{{ app.request.query.get('email') }}">
-                                <div class="input-group-append">
-                                    <button class="btn btn-outline-secondary" type="submit">Search</button>
-                                </div>
+                                                <div class="media align-items-center py-3 mb-3">
+                            <img src="assets/img/avatars/5-small.png" alt="" class="d-block ui-w-100 rounded-circle">
+                            <div class="media-body ml-4">
+                                <a href="{{ path('app_assurance_edit_admin', {'id': assurance.id}) }}" class="btn btn-primary btn-sm">Edit</a>&nbsp;
+                                <a href="{{ path('app_assurance_index') }}">back to list</a>
+                                {{ include('assurance/_delete_form.html.twig') }}
+                            
+                                </a>
                             </div>
-                        </form>
+                        </div>
+                        <div class="card mb-4">
+                            <div class="card-body">
+                                <table class="table user-view-table m-0">
+        <tbody>
+            <tr>
+                <th>Id</th>
+                <td>{{ assurance.id }}</td>
+            </tr>
+            <tr>
+                <th>Date_validite</th>
+                <td>{{ assurance.dateValidite ? assurance.dateValidite|date('Y-m-d') : '' }}</td>
+            </tr>
+            <tr>
+                <th>Immatriculation</th>
+                <td>{{ assurance.immatriculation }}</td>
+            </tr>
+        </tbody>
+    </table>
+                            </div>
+                        </div>
+
                     </div>
-                    <div class="col-sm-6 text-right">
-                        <button class="btn btn-success btn-sm mb-3 btn-round" data-toggle="modal" data-target="#modal-report"><a href="{{ path('app_user_new') }}"><i class="feather icon-plus"></i> Add user</a></button>
-                    </div>
-           {% set orderDirectionParam = orderDirection == 'asc' ? 'desc' : 'asc' %}
-
-<button class="btn btn-info btn-sm mb-3 btn-round" onclick="location.href='{{ path('app_user_index', {'orderBy': 'FirstName', 'orderDirection': orderDirectionParam}) }}'">
-    <i class="feather icon-arrow-{{ orderDirection }}"></i> Sort by First name
-</button>
-
-
-
-                </div>
-                <div class="table-responsive">
-                    <table id="report-table" class="table table-bordered table-striped mb-0">
-                        <thead>
-                            <tr>
-                                <th>Image</th>
-                                <th>Type user</th>
-                                <th>First Name</th>
-                                <th>Last Name</th>
-                                <th>Email</th>
-                                <th>Password</th>
-                                <th>Numero Telephone</th>
-                                <th>Date de Naissance</th>
-                                <th>Gender</th>
-                                <th>Options</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for user in users %}
-                            <tr>
-                                <td><img src="{{ asset('back-office/img/user/avatar-1.jpg') }}" class="img-radius" width="30px" height="30px"></td>
-                                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                                <td>{{ user.FirstName }}</td>
-                                <td>{{ user.LastName }}</td>
-                                <td>{{ user.email }}</td>
-                                <td>********</td>
-                                <td>{{ user.telephone }}</td>
-                                <td>{{ user.birthdate.format('d/m/Y')}}</td>
-                                <td>{{ user.gender }}</td>
-                                <td>
-                                    <a href="{{ path('app_user_show', {'id': user.id}) }}"class="btn btn-info btn-sm">Show</a>
-                                    <a href="{{ path('app_user_edit', {'id': user.id}) }}"class="btn btn-info btn-sm">Edit</a>
-                                    <form action="{{ path('app_user_delete', {'id': user.id}) }}" method="post" onsubmit="return confirm('Are you sure you want to delete this item?');">
-                                        <input type="hidden" name="_method" value="POST">
-                                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-                                        <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                                    </form>
-                                </td>
-                            </tr>
-                            {% else %}
-                            <tr>
-                                <td colspan="6">no records found</td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div
-
                     <!-- [ content ] End -->
-                    <!-- [ Layout footer ] Start -->
+                                        <!-- [ Layout footer ] Start -->
                     <nav class="layout-footer footer footer-light">
                         <div class="container-fluid d-flex flex-wrap justify-content-between text-center container-p-x pb-3">
                             <div class="pt-3">
@@ -387,11 +341,18 @@
                         </div>
                     </nav>
                     <!-- [ Layout footer ] End -->
+
                 </div>
                 <!-- [ Layout content ] Start -->
+
             </div>
             <!-- [ Layout container ] End -->
         </div>
+        <!-- Overlay -->
+        <div class="layout-overlay layout-sidenav-toggle"></div>
+    </div>
+    <!-- [ Layout wrapper ] end -->
+
     {% block js %}
     <!-- Core scripts -->
     <script src="{{asset('back-office/js/pace.js')}}"></script>
@@ -404,18 +365,11 @@
 
     <!-- Libs -->
     <script src="{{asset('back-office/libs/perfect-scrollbar/perfect-scrollbar.js')}}"></script>
-    <script src="{{asset('back-office/libs/datatables/datatables.js')}}"></script>
 
     <!-- Demo -->
     <script src="{{asset('back-office/js/demo.js')}}"></script>
-    <script>
-       // DataTable start
-        $('#report-table').DataTable();
-        // DataTable end
-    </script>
-    <script src="{{asset('back-office/js/pages/dashboards_index.js')}}"></script>
- {% endblock %}
+    {% endblock %}
  <!-- Mirrored from html.phoenixcoded.net/empire/bootstrap/default/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 24 Mar 2023 20:46:47 GMT -->
-</html>
+ </html>
 
 {% endblock %}
