--- a/UserCrud/templates/base-front_passager.html.twig
+++ b/UserCrud/templates/base-front_passager.html.twig
@@ -1,12 +1,6 @@
-{% extends 'base-front_passager.html.twig' %}
-{% block title %}Edit User{% endblock %}
-
-{% block body %}
-
-
 <!DOCTYPE html>
 <html lang="en-US">
-<!-- Mirrored from prium.github.io/tryposh/page-settings.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 12 Apr 2023 00:33:16 GMT -->
+<!-- Mirrored from prium.github.io/tryposh/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 12 Apr 2023 00:30:42 GMT -->
 <!-- Added by HTTrack -->
 <meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 
@@ -14,6 +8,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--  --><!--    Document Title--><!-- =============================================-->
+    <title>{% block title %}Front{% endblock %}</title>
     <!--  --><!--    Favicons--><!--    =============================================-->
     <link rel="icon" type="image/png" sizes="32x32" href="{{asset('front-office/images/favicons/favicon-32x32.png')}}">
     <link rel="icon" type="image/png" sizes="96x96" href="{{asset('front-office/images/favicons/favicon-96x96.png')}}">
@@ -26,19 +22,18 @@
     <link href="{{asset('front-office/lib/bootstrap/dist/css/bootstrap.min.css')}}" rel="stylesheet">
     <!-- Template specific stylesheets-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,600" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,400i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,400i " rel="stylesheet">
     <link href="{{asset('front-office/lib/font-awesome/css/font-awesome.min.css')}}" rel="stylesheet">
     <link href="{{asset('front-office/lib/iconsmind/iconsmind.css')}}" rel="stylesheet">
-    <link href="{{asset('front-office/lib/css-hamburgers/dist/hamburgers.css')}}" rel="stylesheet">
-    <link href="{{asset('front-office/lib/lightbox2/dist/css/lightbox.css')}}" rel="stylesheet"><!-- Main stylesheet and color file-->
+    <link href="{{asset('front-office/lib/css-hamburgers/dist/hamburgers.css')}}" rel="stylesheet"><!-- Main stylesheet and color file-->
     <link href="{{asset('front-office/css/style.css')}}" rel="stylesheet">
     <link href="{{asset('front-office/css/custom.css')}}" rel="stylesheet">
     {% endblock %}
 </head>
-
-<body data-spy="scroll" data-target=".inner-link" data-offset="60">
+{% block body %}
+ <data-spy="scroll" data-target=".inner-link" data-offset="60">
     <main>
-        <div class="znav-container" id="znav-container">
+        <div class="znav-container znav-white znav-fixed border-bottom color-10" id="znav-container">
             <div class="container">
                 <nav class="navbar navbar-toggleable-md"><button class="navbar-toggler navbar-toggler-right"
                         type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -48,15 +43,17 @@
                                 <div class="hamburger-inner"></div>
                             </div>
                         </div>
-                    </button><a class="navbar-brand overflow-hidden" href="index.html">TicTacGo</a>
+                    </button><a class="navbar-brand overflow-hidden" href="{{ path('app_home_front_passager') }}"><img
+                            src="{{asset('front-office/images/posh.png')}}" alt='logo' width='80px'></a>
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav ml-auto">
                             <li><a href="JavaScript:void(0)">Settings</a>
                                 <ul class="dropdown">
                                     <li><a href="JavaScript:void(0)">Account</a>
                                         <ul class="dropdown dropdown-push-right">
-                                            <li><a href="{{ path('app_user_show_front', {'id': user.id}) }}">view Profile</a></li>
-                                            <li><a href="{{ path('app_user_edit_front', {'id': user.id}) }}">Account Settings</a></li>
+                                        <li><a href="{{ path('app_user_show_front', {'id': user.id}) }}">view Profile</a></li>
+                                        <li><a href="{{ path('app_user_edit_front', {'id': user.id}) }}">Account Settings</a></li>
+                                        <li><a href="{{ path('app_user_edit_password_passager', {'id': user.id}) }}" class="mt30 col s12">changer votre mot de passe</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="{{ path('app_logout') }}">Log out</a></li>
@@ -67,32 +64,73 @@
                 </nav>
             </div><!-- /.container-->
         </div><!-- /.znav-container-->
-        <section class="font-1">
+        <section class="font-1 py-0">
+            <div class="container">
+                <div class="row h-lg-full align-items-end overflow-hidden">
+                    <div class="col text-center pt-8">
+                        <h6 class="ls text-uppercase mb-5">Introducing</h6>
+                        <h2 class="fw-300">welcome to TicTacGo <span class="color-primary"><br class="hidden-sm-up"><span
+                                    class="typed-text fw-400"
+                                    data-typed-text='["beautiful","gorgeous","outstanding","remarkable","stunning"]'></span></span><br
+                                class="hidden-sm-up"> websites</h2>
+                    </div>
+                </div><!--/.row-->
+            </div><!--/.container-->
+        </section>
+        <section class="font-1 text-center background-1 py-6 py-xl-9" id="home-demos">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-lg-3">
-                        <div class="row font-1">
-                            <div class="col text-center text-lg-left">
-                                <h5 class="mb-0 mt-3">{{ user.FirstName }}<span class="text-muted font-weight-normal"></span></h5>
-                                <h5 class="mb-0 mt-3">{{ user.LastName }}<span class="text-muted font-weight-normal"></span></h5>
-                                <p class="mb-0">{{ user.roles ? user.roles|json_encode : '' }}</p>
-                                <hr class="color-9">
-                                <div class="fs--1 fw-600"><a class="d-block mb-2" href="{{ path('app_user_show_front', {'id': user.id}) }}">Profile</a>
-                                     {{ include('user/_delete_formFront.html.twig') }}
-                                </div>
-                            </div>
-                        </div>
+                    <div class="col-xl-9 col-lg-10">
+                        <div class="fs-2 color-7 fw-300">No matter the task, the new POSH is up to it — and even more.
+                            See for yourself — all the pre-made demos, inspired by world's finest websites, are <span
+                                class="fw-600 color-white">made with POSH. </span>And this is only a tip of the iceberg
+                            of what you will get.</div>
+                        <hr class="short color-7 mt-6 mb-5">
                     </div>
-                    <div class="col-md-9 pl-lg-5">
-                        <div class="row">
-                            <div class="col-lg-8 mt-5 mt-lg-0">
-                                <h4 class="color-black mb-2">Edit Profile</h4>
-                            </div>
-                        </div>
-                       
-                            {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
-                       
-                        <a href="{{ path('app_home_front_passager') }}"><button type="button" class="btn btn-default">Cancel</button></a>
+                </div><!--/.row-->
+            </div><!--/.container-->
+        </section>
+        <section class="font-1 text-center background-1 pt-0 sortable">
+            <div class="container-fluid">
+                <div class="row sortable-container"><a class="col-6 col-md-4 mb-5 sortable-item color-9"
+                    </a><a class="col-6 col-md-4 mb-5 sortable-item color-9" href="">
+                        <h6 class="fs-0 mb-3">Profile</h6><img src="{{asset('front-office/images/screenshots/page-profile.jpg')}}">
+                    </a><a class="col-6 col-md-4 mb-5 sortable-item color-9" href="">
+                        <h6 class="fs-0 mb-3">Settings</h6><img src="{{asset('front-office/images/screenshots/page-settings.jpg')}}">
+                    </a><a class="col-6 col-md-4 mb-5 sortable-item color-9" href="">
+                        <h6 class="fs-0 mb-3">Account Recovery</h6><img
+                            src="{{asset('front-office/images/screenshots/page-recovery.jpg')}}">
+                    </a></div><!--/.row-->
+            </div><!--/.container-->
+        </section>
+        <section class="font-1 lh-3 fw-400 pb-0" style="letter-spacing: -1px;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 px-5 py-3">
+                        <hr class="color-danger">
+                        <div class="fs-3">Optimized for every screen size down to a single pixel.</div>
+                    </div>
+                    <div class="col-lg-6 px-5 py-3">
+                        <hr class="color-danger">
+                        <div class="fs-3">The most modular layout system on the planet.</div>
+                    </div>
+                    <div class="col-lg-6 px-5 py-3">
+                        <hr class="color-danger">
+                        <div class="fs-3">More powerful than most HTML5 templates.</div>
+                    </div>
+                    <div class="col-lg-6 px-5 py-3">
+                        <hr class="color-danger">
+                        <div class="fs-3">Bootstrap 4 takes POSH to a whole new level.</div>
+                    </div>
+                </div><!--/.row-->
+            </div><!--/.container-->
+        </section>
+        <section class="text-center font-1 py-0">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 col-xl-8 py-8">
+                        <hr class="short color-7 mb-6">
+                        <p class="lead color-1">Want to see the magic? Start creating with POSH</p>
                     </div>
                 </div><!--/.row-->
             </div><!--/.container-->
@@ -133,11 +171,12 @@
         })(window, document, 'script', '../../www.google-analytics.com/analytics.js', 'ga');
         ga('create', 'UA-76729372-3', 'auto');
         ga('send', 'pageview');</script>
-    <script src="{{asset('front-office/lib/lightbox2/dist/js/lightbox.js')}}"></script>
+    <script src="{{asset('front-office/lib/typed.js/dist/typed.min.js')}}"></script>
+    <script src="{{asset('front-office/lib/isotope/dist/isotope.pkgd.js')}}"></script>
     <script src="{{asset('front-office/js/core.js')}}"></script>
     <script src="{{asset('front-office/js/main.js')}}"></script>
     {% endblock %}
-<!-- Mirrored from prium.github.io/tryposh/page-settings.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 12 Apr 2023 00:33:16 GMT -->
+{% endblock %}
+<!-- Mirrored from prium.github.io/tryposh/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 12 Apr 2023 00:30:42 GMT -->
 
 </html>
-{% endblock %}
