--- a/UserCrud/templates/user/showFront_chauffeur.html.twig
+++ b/UserCrud/templates/user/showFront_chauffeur.html.twig
@@ -63,7 +63,7 @@
     </div>
     <!-- [ Preloader ] End -->
 <div class="znav-container" id="znav-container">
-            <div class="container">
+                      <div class="container">
                 <nav class="navbar navbar-toggleable-md"><button class="navbar-toggler navbar-toggler-right"
                         type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,20 +72,28 @@
                                 <div class="hamburger-inner"></div>
                             </div>
                         </div>
-                    </button><a class="navbar-brand overflow-hidden" href="index.html">Ticatacgo</a>
+                    </button><a class="navbar-brand overflow-hidden" href="{{ path('app_home_front_chauffeur') }}"><img
+                            src="{{asset('front-office/images/posh.png')}}" alt='logo' width='80px'></a>
                     <div class="collapse navbar-collapse" id="navbarNavDropdown">
                         <ul class="navbar-nav ml-auto">
                             <li><a href="JavaScript:void(0)">Settings</a>
                                 <ul class="dropdown">
                                     <li><a href="JavaScript:void(0)">Account</a>
                                         <ul class="dropdown dropdown-push-right">
-                                            <li><a href="{{ path('app_user_show_front', {'id': user.id}) }}">view Profile</a></li>
-                                            <li><a href="{{ path('app_user_edit_front', {'id': user.id}) }}">Account Settings</a></li>
+                                        <li><a href="{{ path('app_user_show_front_chauffeur', {'id': user.id}) }}">view Profile</a></li>
+                                            <li><a href="{{ path('app_user_edit_front_chauffeur', {'id': user.id}) }}">Account Settings</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="{{ path('app_logout') }}">Log out</a></li>
                                 </ul>
                             </li>
+                            <li><a href="JavaScript:void(0)">Assurance</a>
+                                <ul class="dropdown">
+                                    <li><a href="{{ path('app_assurance_new', {'id': user.id}) }}">Ajouter Assurance</a></li>
+{% if assurance is not null and assurance.createdBy is not null %}
+    <li><a href="{{ path('app_assurance_index_chauffeur', {'created_by_id': assurance.createdBy.id}) }}">consulter votre assurance</a></li>
+{% endif %}
+</li>                            </li>
                         </ul>
                     </div>
                 </nav>
@@ -105,8 +113,8 @@
                                 <h4 class="font-weight-bold mb-0">{{ user.FirstName }}<span class="text-muted font-weight-normal"></span></h4>
                                 <h4 class="font-weight-bold mb-0">{{ user.LastName }}<span class="text-muted font-weight-normal"></span></h4>
                                 <div class="text-muted mb-2">ID: {{ user.id }}</div>
-                                <a href="{{ path('app_user_edit_front', {'id': user.id}) }}" class="btn btn-primary btn-sm">Edit</a>&nbsp;
-                                <a href="{{ path('app_home_front_passager') }}">back</a>
+                                <a href="{{ path('app_user_edit_front_chauffeur', {'id': user.id}) }}" class="btn btn-primary btn-sm">Edit</a>&nbsp;
+                                <a href="{{ path('app_home_front_chauffeur') }}">back</a>
                                 {{ include('user/_delete_formFront.html.twig') }}
                             
                                 </a>
