--- a/GestionP/templates/index.html.twig
+++ b/GestionP/templates/index.html.twig
@@ -103,8 +103,8 @@
                                 </a>
                             </li>
                             <li class="sidenav-item">
-                                <a href="dashboards_project.html" class="sidenav-link">
-                                    <div>Project</div>
+                                <a href="{{ path('dashboards_project') }}" class="sidenav-link">
+                                    <div>Edit</div>
                                 </a>
                             </li>
                         </ul>
