--- a/GestionP/templates/dashboards_project.html.twig
+++ b/GestionP/templates/dashboards_project.html.twig
@@ -548,6 +548,11 @@
                     </li>
 
                     <!-- Charts & Maps -->
+                    <div>
+                   {{ include('paiement/_form.html.twig', {'button_label': 'Update'}) }}
+
+                    </div>
+                   
                     <li class="sidenav-divider mb-1"></li>
                     <li class="sidenav-header small font-weight-semibold">Chrt & Maps</li>
                     <li class="sidenav-item">
