--- a/GestionP/templates/paiement/indexR.html.twig
+++ b/GestionP/templates/paiement/indexR.html.twig
@@ -1,16 +1,13 @@
-{% extends 'base.html.twig' %}
-
 
 
 
 {% block body %}
-<!DOCTYPE html>
-<!-- show admin button show -->
+    <!DOCTYPE html>
 
 <html lang="en" class="default-style layout-fixed layout-navbar-fixed">
 <!-- Mirrored from html.phoenixcoded.net/empire/bootstrap/default/school-parents.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 24 Mar 2023 20:55:42 GMT -->
 <head>
-{% block title %}Edit PaiementMethod{% endblock %}
+{% block title %}Admin{% endblock %}
  <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
@@ -38,8 +35,7 @@
 
     <!-- Libs -->
     <link rel="stylesheet" href="{{asset('assets/libs/perfect-scrollbar/perfect-scrollbar.css')}}">
-    <!-- Page -->
-    <link rel="stylesheet" href="{{asset('assets/css/pages/users.css')}}">
+    <link rel="stylesheet" href="{{asset('assets/libs/flot/flot.css')}}">
 {% endblock %}
 
 </head>
@@ -52,6 +48,7 @@
     <!-- [ Layout wrapper ] Start -->
     <div class="layout-wrapper layout-2">
         <div class="layout-inner">
+       
             <!-- [ Layout sidenav ] Start -->
             <div id="layout-sidenav" class="layout-sidenav sidenav sidenav-vertical bg-white logo-dark">
                 <!-- Brand demo (see assets/css/demo/demo.css) -->
@@ -76,12 +73,26 @@
                             <div>Paiement</div>
                         </a>
                         <ul class="sidenav-menu">
-                              <a href="{{ path('app_paiement_index') }}" class="sidenav-link">
+                            <li class="sidenav-item active">
+                                <a href="{{ path('app_paiement_index') }}" class="sidenav-link">
                                     <div>gestion Paiement</div>
                                 </a>
-                            <li class="sidenav-item active">
+                                
+                            </li>
                             <a href="{{ path('app_pay_method_index') }}" class="sidenav-link">
                                     <div>gestion Methode paiement</div>
+                                </a>
+                        </ul>
+                    </li>
+                    <li class="sidenav-item active open">
+                        <a href="javascript:" class="sidenav-link sidenav-toggle">
+                            <i class="sidenav-icon feather icon-users"></i>
+                            <div>Dashboard</div>
+                        </a>
+                        <ul class="sidenav-menu">
+                            <li >
+                                <a href="{{ path('payment_statistics') }}" class="sidenav-link">
+                                    <div>Statistics </div>
                                 </a>
                                 
                             </li>
@@ -285,26 +296,54 @@
                                 <li class="breadcrumb-item active">Paiement view</li>
                             </ol>
                         </div>
-
-                        <div class="media align-items-center py-3 mb-3">
-                            <img src="assets/img/avatars/5-small.png" alt="" class="d-block ui-w-100 rounded-circle">
-                           
-    <div class="card mb-4">
-        <div class="card-body">
-   <div class="container">
-      <h1>Edit PaiementMethod</h1>
-
-    {{ include('pay_method/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_pay_method_index') }}">back to list</a>
-
-    {{ include('pay_method/_delete_form.html.twig') }}
-    </div>
-    </div>
+                         <div class="row">
+                            <!-- subscribe start -->
+                            <div class="col-md-12">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <h5>Paiement list</h5>
+                                    </div>
+                        <div class="card-body">
+                                        <div class="table-responsive">
+    <table id="report-table" class="table table-bordered table-striped mb-0">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Amount</th>
+                <th>PaiementDate</th>
+                <th>Description</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+       <tbody>
+        {% for paiement in paiements %}
+            <tr>
+                <td>{{ paiement.id }}</td>
+                <td>{{ paiement.Amount }}</td>
+                <td>{{ paiement.PaiementDate ? paiement.PaiementDate|date('Y-m-d') : '' }}</td>
+                <td>{{ paiement.Description }}</td>
+                <td>
+                    <a href="{{ path('app_paiement_show', {'id': paiement.id}) }}">show</a>
+                    <a href="{{ path('app_paiement_edit', {'id': paiement.id}) }}">edit</a>
+                     <a href="{{ path('app_paiement_editB', {'id': paiement.id}) }}">Delete</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="6">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+  </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- subscribe end -->
                         </div>
-                                            </div>
+                    </div>
                     <!-- [ content ] End -->
-<!-- [ Layout footer ] Start -->
+                    <!-- [ Layout footer ] Start -->
                     <nav class="layout-footer footer footer-light">
                         <div class="container-fluid d-flex flex-wrap justify-content-between text-center container-p-x pb-3">
                             <div class="pt-3">
@@ -319,18 +358,11 @@
                         </div>
                     </nav>
                     <!-- [ Layout footer ] End -->
-
                 </div>
                 <!-- [ Layout content ] Start -->
-
             </div>
             <!-- [ Layout container ] End -->
         </div>
-        <!-- Overlay -->
-        <div class="layout-overlay layout-sidenav-toggle"></div>
-    </div>
-    <!-- [ Layout wrapper ] end -->
-
     {% block js %}
     <!-- Core scripts -->
     <script src="{{asset('assets/js/pace.js')}}"></script>
@@ -343,17 +375,17 @@
 
     <!-- Libs -->
     <script src="{{asset('assets/libs/perfect-scrollbar/perfect-scrollbar.js')}}"></script>
+    <script src="{{asset('assets/libs/datatables/datatables.js')}}"></script>
 
     <!-- Demo -->
     <script src="{{asset('assets/js/demo.js')}}"></script>
-    {% endblock %}
+    <script>
+       // DataTable start
+        $('#report-table').DataTable();
+        // DataTable end
+    </script>
+    <script src="{{asset('assets/js/pages/dashboards_index.js')}}"></script>
+ {% endblock %}
  <!-- Mirrored from html.phoenixcoded.net/empire/bootstrap/default/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 24 Mar 2023 20:46:47 GMT -->
- </html>
-
-
+</html>
 {% endblock %}
-
-
-
-
-
