--- a/GestionP/templates/paiement/showF.html.twig
+++ b/GestionP/templates/paiement/showF.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base-front.html.twig' %}
 
-{% block title %}New Payment{% endblock %}
+{% block title %}New Paiement{% endblock %}
 
 {% block body %}
 <!DOCTYPE html>
@@ -31,21 +31,43 @@
     <link href="{{asset('assets2/lib/css-hamburgers/dist/hamburgers.css')}}" rel="stylesheet"><!-- Main stylesheet and color file-->
     <link href="{{asset('assets2/css/style.css')}}" rel="stylesheet">
     <link href="{{asset('assets2/css/custom.css')}}" rel="stylesheet">
+     
     {% endblock %}
 </head>
 <body>
 <div class="container">
-
-<br>
-<br>
-<br>
-<h2>creer un paiement</h2>
-    {{ include('paiement/_form.html.twig') }}
-    
-
-    <a href="{{ path('app_home_front') }}">back</a>
+     
+     <div>helo</div>
+<div>helo</div>
+<div>helo</div>
+<div></div>
+     <table class="table user-view-table m-0">
+        <tbody>
+            <tr>
+                <th>Id</th>
+                <td>{{ paiement.id }}</td>
+            </tr>
+            <tr>
+                <th>Amount</th>
+                <td>{{ paiement.Amount }}</td>
+            </tr>
+            <tr>
+                <th>PaiementDate</th>
+                <td>{{ paiement.PaiementDate ? paiement.PaiementDate|date('Y-m-d') : '' }}</td>
+            </tr>
+            <tr>
+                <th>Description</th>
+                <td>{{ paiement.Description }}</td>
+            </tr>
+        </tbody>
+    </table>
+ <a href="{{ path('app_paiement_editF', {'id': paiement.id}) }}">edit</a>
+ 
+    <a href="{{ path('app_paiement_new') }}">back</a>
+   
     </div>
-    </body>
+  
+</body>
 <data-spy="scroll" data-target=".inner-link" data-offset="60">
     <main>
         <div class="znav-container znav-white znav-fixed border-bottom color-10" id="znav-container">
@@ -67,7 +89,7 @@
                                     <li><a href="JavaScript:void(0)">Paiement</a>
                                         <ul class="dropdown dropdown-push-left">
                                             <li><a href="{{ path('app_paiement_new') }}">Ajouter paiement</a></li>
-                                            <li><a href="{{ path('app_paiement_indexF') }}">Consulter Paiement</a></li>
+                                            <li><a href="{{ path('app_paiement_indexF') }}">Consulter paiement</a></li>
                                         </ul>
                                     </li>
                                 </ul>
