--- a/GestionP/templates/paiement/statistics2.html.twig
+++ b/GestionP/templates/paiement/statistics2.html.twig
@@ -1,7 +1,11 @@
+{# payment/statistics.html.twig #}
 {% extends 'base.html.twig' %}
-
-
-
+{#
+hedhi eli te5dem
+{% block body %}
+   
+{% endblock %}
+#}
 
 {% block body %}
 <!DOCTYPE html>
@@ -10,7 +14,7 @@
 <html lang="en" class="default-style layout-fixed layout-navbar-fixed">
 <!-- Mirrored from html.phoenixcoded.net/empire/bootstrap/default/school-parents.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 24 Mar 2023 20:55:42 GMT -->
 <head>
-{% block title %}Edit PaiementMethod{% endblock %}
+{% block title %}Admin{% endblock %}
  <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
@@ -76,12 +80,25 @@
                             <div>Paiement</div>
                         </a>
                         <ul class="sidenav-menu">
-                              <a href="{{ path('app_paiement_index') }}" class="sidenav-link">
+                            <li >
+                                <a href="{{ path('app_paiement_index') }}" class="sidenav-link">
                                     <div>gestion Paiement</div>
                                 </a>
-                            <li class="sidenav-item active">
-                            <a href="{{ path('app_pay_method_index') }}" class="sidenav-link">
+                            </li>
+                             <a href="{{ path('app_pay_method_index') }}" class="sidenav-link">
                                     <div>gestion Methode paiement</div>
+                                </a>
+                        </ul>
+                    </li>
+                    <li class="sidenav-item active open">
+                        <a href="javascript:" class="sidenav-link sidenav-toggle">
+                            <i class="sidenav-icon feather icon-users"></i>
+                            <div>Dashboard</div>
+                        </a>
+                        <ul class="sidenav-menu">
+                            <li class="sidenav-item active">
+                                <a href="{{ path('payment_statistics') }}" class="sidenav-link">
+                                    <div>Statistics </div>
                                 </a>
                                 
                             </li>
@@ -285,23 +302,128 @@
                                 <li class="breadcrumb-item active">Paiement view</li>
                             </ol>
                         </div>
+                         <div class="card mb-4">
+        <div class="card-body">
+    
 
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Total Amount</th>
+                <th>Average Amount</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for stat in paymentStats %}
+                <tr>
+                    <td>{{ stat.date }}</td>
+                    <td>{{ stat.totalAmount }}</td>
+                    <td>{{ stat.averageAmount }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+    {{ knp_pagination_render(paymentStats) }}
+    </div>
+    </div>
+    <br>
+ <div class="container">
+        <h1>Payment Statistics</h1>
+       <div id="div_chart1" style="width: 100%;"></div>
+    
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+        {{ gc_draw(chart1, 'div_chart1') }}
+    </script>
+   
+                        </div>
+                        <br>
+                         <div class="container">
+        
+       <div id="div_chart2"></div>
+    
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+        {{ gc_draw(chart2, 'div_chart2') }}
+    </script>
+   
+                        </div>
+                        <br>
+                        <div class="container">
+        
+       <div id="div_chart"></div>
+    
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+        {{ gc_draw(chart, 'div_chart') }}
+    </script>
+   
+                        </div>
+                        <br>
+
+                        <div class="card mb-4">
+        <div class="card-body">
+                         <div class="container">
+                        
+
+    <canvas id="paymentChart"></canvas>
+    {{ knp_pagination_render(paymentStats) }}
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script>
+        var dates = [];
+        var totalAmounts = [];
+        var averageAmounts = [];
+
+        {% for stat in paymentStats %}
+            dates.push('{{ stat.date }}');
+            totalAmounts.push({{ stat.totalAmount }});
+            averageAmounts.push({{ stat.averageAmount }});
+        {% endfor %}
+
+        var ctx = document.getElementById('paymentChart').getContext('2d');
+        var chart = new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: dates,
+                datasets: [{
+                    label: 'Total Amount',
+                    data: totalAmounts,
+                    backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                    borderColor: 'rgba(255, 99, 132, 1)',
+                    borderWidth: 1
+                }, {
+                    label: 'Average Amount',
+                    data: averageAmounts,
+                    backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                    borderColor: 'rgba(54, 162, 235, 1)',
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
+            }
+        });
+    </script>
+    </div>
+    </div>
+    </div>
+    <br>
+   
                         <div class="media align-items-center py-3 mb-3">
                             <img src="assets/img/avatars/5-small.png" alt="" class="d-block ui-w-100 rounded-circle">
                            
-    <div class="card mb-4">
-        <div class="card-body">
-   <div class="container">
-      <h1>Edit PaiementMethod</h1>
-
-    {{ include('pay_method/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('app_pay_method_index') }}">back to list</a>
-
-    {{ include('pay_method/_delete_form.html.twig') }}
-    </div>
-    </div>
-                        </div>
+   
+   
+                        
                                             </div>
                     <!-- [ content ] End -->
 <!-- [ Layout footer ] Start -->
@@ -349,9 +471,11 @@
     {% endblock %}
  <!-- Mirrored from html.phoenixcoded.net/empire/bootstrap/default/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 24 Mar 2023 20:46:47 GMT -->
  </html>
-
-
 {% endblock %}
+
+
+
+
 
 
 
